--- a/FynzoSurvey/Storyboard/Home.storyboard
+++ b/FynzoSurvey/Storyboard/Home.storyboard
@@ -986,6 +986,40 @@
             </objects>
             <point key="canvasLocation" x="7075" y="121"/>
         </scene>
+        <!--Web Kit View Controller-->
+        <scene sceneID="ijO-pI-4sW">
+            <objects>
+                <viewController storyboardIdentifier="WebKitViewController" id="9p8-I6-1mG" customClass="WebKitViewController" customModule="FynzoSurvey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g9q-tH-biI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="44n-XZ-QQ7">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="44n-XZ-QQ7" firstAttribute="top" secondItem="Pcv-Hc-ZIh" secondAttribute="top" id="3po-uW-fbR"/>
+                            <constraint firstItem="Pcv-Hc-ZIh" firstAttribute="trailing" secondItem="44n-XZ-QQ7" secondAttribute="trailing" id="ESw-yW-g09"/>
+                            <constraint firstItem="44n-XZ-QQ7" firstAttribute="leading" secondItem="Pcv-Hc-ZIh" secondAttribute="leading" id="Xpo-2n-5rb"/>
+                            <constraint firstItem="Pcv-Hc-ZIh" firstAttribute="bottom" secondItem="44n-XZ-QQ7" secondAttribute="bottom" id="Yf8-Ku-gU9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Pcv-Hc-ZIh"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="44n-XZ-QQ7" id="fLf-Ag-Do4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s1G-eL-VSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7873" y="114"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Chat With Us" width="64" height="64"/>
