--- a/FynzoSurvey/ViewControllers/SideMenu/Setting/SettingTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/SideMenu/Setting/SettingTableViewCell.xib
@@ -20,17 +20,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="56.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFj-lL-c3o">
-                        <rect key="frame" x="12" y="16" width="100" height="24.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto Upload" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFj-lL-c3o">
+                        <rect key="frame" x="12" y="16" width="90" height="24.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="H2s-NV-QLL"/>
+                            <constraint firstAttribute="width" constant="90" id="H2s-NV-QLL"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="63k-eT-1pg">
-                        <rect key="frame" x="127" y="15" width="178" height="26.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="63k-eT-1pg">
+                        <rect key="frame" x="104" y="15" width="201" height="26.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -55,7 +55,7 @@
                     <constraint firstItem="HFj-lL-c3o" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="OMA-qU-GDa"/>
                     <constraint firstItem="6UW-DT-qFf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PPb-ie-bqJ"/>
                     <constraint firstItem="63k-eT-1pg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="eFq-qc-A5y"/>
-                    <constraint firstItem="63k-eT-1pg" firstAttribute="leading" secondItem="HFj-lL-c3o" secondAttribute="trailing" constant="15" id="fTe-ys-rJp"/>
+                    <constraint firstItem="63k-eT-1pg" firstAttribute="leading" secondItem="HFj-lL-c3o" secondAttribute="trailing" constant="2" id="fTe-ys-rJp"/>
                     <constraint firstItem="6UW-DT-qFf" firstAttribute="trailing" secondItem="63k-eT-1pg" secondAttribute="trailing" id="jlh-e1-jQZ"/>
                     <constraint firstAttribute="bottom" secondItem="HFj-lL-c3o" secondAttribute="bottom" constant="16" id="sNY-HI-G5W"/>
                     <constraint firstAttribute="trailing" secondItem="63k-eT-1pg" secondAttribute="trailing" constant="15" id="tBo-Ch-1ni"/>
