--- a/FynzoSurvey/ViewControllers/Form/TextFieldCollectionViewCell/TextfieldTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/TextFieldCollectionViewCell/TextfieldTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9o-Qv-9V5" customClass="FormBoldLabel" customModule="FynzoSurvey" customModuleProvider="target">
@@ -28,11 +26,30 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xzq-7B-lgt">
+                        <rect key="frame" x="60" y="50" width="200" height="90"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="YFR-Ef-v0X"/>
+                        </connections>
+                    </textView>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type answer here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cU1-pi-IJw" customClass="ORDesignableTextField" customModule="FynzoSurvey" customModuleProvider="target">
-                        <rect key="frame" x="20" y="70" width="280" height="40"/>
+                        <rect key="frame" x="60" y="70" width="200" height="35"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="s70-W0-k80"/>
+                            <constraint firstAttribute="height" constant="35" id="s70-W0-k80"/>
                         </constraints>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -57,11 +74,15 @@
                     </textField>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="xzq-7B-lgt" secondAttribute="bottom" constant="10" id="25h-q2-mvL"/>
+                    <constraint firstItem="xzq-7B-lgt" firstAttribute="top" secondItem="t9o-Qv-9V5" secondAttribute="bottom" id="4lb-bJ-1B6"/>
                     <constraint firstItem="t9o-Qv-9V5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="5cI-7s-02k"/>
-                    <constraint firstItem="cU1-pi-IJw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="AE2-nu-36s"/>
+                    <constraint firstItem="cU1-pi-IJw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="AE2-nu-36s"/>
                     <constraint firstItem="cU1-pi-IJw" firstAttribute="top" secondItem="t9o-Qv-9V5" secondAttribute="bottom" constant="20" id="D3R-ok-is2"/>
+                    <constraint firstItem="xzq-7B-lgt" firstAttribute="leading" secondItem="cU1-pi-IJw" secondAttribute="leading" id="OAq-cp-QKX"/>
                     <constraint firstAttribute="trailing" secondItem="t9o-Qv-9V5" secondAttribute="trailing" constant="10" id="fH4-ZN-cbv"/>
-                    <constraint firstAttribute="trailing" secondItem="cU1-pi-IJw" secondAttribute="trailing" constant="20" id="g1S-g7-g6d"/>
+                    <constraint firstAttribute="trailing" secondItem="cU1-pi-IJw" secondAttribute="trailing" constant="60" id="g1S-g7-g6d"/>
+                    <constraint firstItem="xzq-7B-lgt" firstAttribute="trailing" secondItem="cU1-pi-IJw" secondAttribute="trailing" id="sWt-sm-wsb"/>
                     <constraint firstItem="t9o-Qv-9V5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="wyG-aQ-v8k"/>
                 </constraints>
             </tableViewCellContentView>
@@ -70,7 +91,9 @@
             <connections>
                 <outlet property="label" destination="t9o-Qv-9V5" id="jAd-S9-HpH"/>
                 <outlet property="textField" destination="cU1-pi-IJw" id="Tru-Jh-3L4"/>
+                <outlet property="textView" destination="xzq-7B-lgt" id="nrI-DP-ThC"/>
             </connections>
+            <point key="canvasLocation" x="131.8840579710145" y="133.92857142857142"/>
         </tableViewCell>
     </objects>
 </document>
