--- a/FynzoSurvey/ViewControllers/Home/HomeTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Home/HomeTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,20 +15,20 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QYg-yI-2g7">
-                        <rect key="frame" x="10" y="5" width="300" height="70.5"/>
+                        <rect key="frame" x="10" y="5" width="300" height="71"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ok-fE-8R8">
-                                <rect key="frame" x="15" y="15" width="182" height="40.5"/>
+                                <rect key="frame" x="15" y="15" width="160" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" name="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czX-eu-pOn">
-                                <rect key="frame" x="212" y="20.5" width="80" height="30"/>
+                                <rect key="frame" x="190" y="20.5" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="8lx-ZP-XXe"/>
                                     <constraint firstAttribute="height" constant="30" id="y5d-db-oli"/>
@@ -50,15 +48,26 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jw9-HG-ytg">
+                                <rect key="frame" x="280" y="20.5" width="20" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="Pxl-vB-RDa"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="6" maxX="0.0" maxY="6"/>
+                                <state key="normal" title="Button" image="threedot"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Jw9-HG-ytg" firstAttribute="height" secondItem="czX-eu-pOn" secondAttribute="height" id="0Tb-BH-FVI"/>
                             <constraint firstAttribute="bottom" secondItem="4ok-fE-8R8" secondAttribute="bottom" constant="15" id="9sP-2E-7DN"/>
                             <constraint firstItem="4ok-fE-8R8" firstAttribute="top" secondItem="QYg-yI-2g7" secondAttribute="top" constant="15" id="ENH-N8-b2j"/>
                             <constraint firstItem="czX-eu-pOn" firstAttribute="leading" secondItem="4ok-fE-8R8" secondAttribute="trailing" constant="15" id="MC2-JW-dEG"/>
-                            <constraint firstAttribute="trailing" secondItem="czX-eu-pOn" secondAttribute="trailing" constant="8" id="QJS-2g-awe"/>
                             <constraint firstItem="4ok-fE-8R8" firstAttribute="leading" secondItem="QYg-yI-2g7" secondAttribute="leading" constant="15" id="fHJ-2S-6hM"/>
+                            <constraint firstItem="Jw9-HG-ytg" firstAttribute="centerY" secondItem="czX-eu-pOn" secondAttribute="centerY" id="iAy-nZ-0cS"/>
+                            <constraint firstItem="Jw9-HG-ytg" firstAttribute="leading" secondItem="czX-eu-pOn" secondAttribute="trailing" constant="10" id="m7m-17-maa"/>
                             <constraint firstItem="czX-eu-pOn" firstAttribute="centerY" secondItem="QYg-yI-2g7" secondAttribute="centerY" id="vnF-aM-bFJ"/>
+                            <constraint firstAttribute="trailing" secondItem="Jw9-HG-ytg" secondAttribute="trailing" id="wRF-8n-X24"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -77,6 +86,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="dotButton" destination="Jw9-HG-ytg" id="Ham-Gh-Ojf"/>
                 <outlet property="label" destination="4ok-fE-8R8" id="yPD-Lb-nKW"/>
                 <outlet property="startButton" destination="czX-eu-pOn" id="rvd-0t-eJb"/>
             </connections>
@@ -84,6 +94,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="threedot" width="60" height="60"/>
         <namedColor name="appThemeColor">
             <color red="0.27058823529411763" green="0.59999999999999998" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
